paper updates